update: Using ResponseObject + add security utils