@@ -8,7 +8,9 @@ import com.project.shopapp.model.Product;
 import com.project.shopapp.model.ProductImage;
 import com.project.shopapp.response.ProductListResponse;
 import com.project.shopapp.response.ProductResponse;
+import com.project.shopapp.response.ResponseObject;
 import com.project.shopapp.service.ProductService;
+import com.project.shopapp.utils.MessageKeys;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
@@ -20,10 +22,20 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.util.StringUtils;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -46,73 +58,91 @@ public class ProductController {
     private final LocalizationUtils localizationUtils;
 
     @PostMapping(value = "")
-    public ResponseEntity<?> createProduct(
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    public ResponseEntity<ResponseObject> createProduct(
             @Valid @RequestBody ProductDTO productDTO,
-//            @ModelAttribute("files") List<MultipartFile> files,
             BindingResult result
-    ) {
-        try {
-            if (result.hasErrors()) {
-                List<String> errorMessages = result.getFieldErrors()
-                        .stream()
-                        .map(FieldError::getDefaultMessage)
-                        .toList();
-                return ResponseEntity.badRequest().body(errorMessages);
-            }
-
-            Product newProduct = productService.createProduct(productDTO);
-            return ResponseEntity.ok(newProduct);
-
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
+    ) throws Exception {
+        if (result.hasErrors()) {
+            List<String> errorMessages = result.getFieldErrors()
+                    .stream()
+                    .map(FieldError::getDefaultMessage)
+                    .toList();
+            return ResponseEntity.badRequest().body(
+                    ResponseObject.builder()
+                            .message(String.join("; ", errorMessages))
+                            .status(HttpStatus.BAD_REQUEST)
+                            .build()
+            );
         }
+        Product newProduct = productService.createProduct(productDTO);
+        return ResponseEntity.ok(
+                ResponseObject.builder()
+                        .message("Create new product successfully")
+                        .status(HttpStatus.CREATED)
+                        .data(newProduct)
+                        .build());
     }
 
     @PostMapping(value = "uploads/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<?> uploadImages(
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    public ResponseEntity<ResponseObject> uploadImages(
             @PathVariable("id") Long productId,
             @ModelAttribute("files") List<MultipartFile> files
-    ) {
-        try {
-            Product existingProduct = productService.getProductById(productId);
-            files = files == null ? new ArrayList<>() : files;
-            if (files.size() > ProductImage.MAXIMUM_IMAGES_PER_PRODUCT) {
-                return ResponseEntity.badRequest().body("You can only upload maximum 5 images");
-            }
-
-            List<ProductImage> productImages = new ArrayList<>();
-            for (MultipartFile file : files) {
-                if (file.getSize() == 0) continue;
-
-                // Kiểm tra kích thước file và định dạng
-                if (file.getSize() > 10 * 1024 * 1024) {  // Kích thước > 10MB
-                    return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE)
-                            .body("File is too large! Maximum size is 10MB");
-                }
-
-                String contentType = file.getContentType();
-                if (contentType == null || !contentType.startsWith("image/")) {
-                    return ResponseEntity.status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
-                            .body("File must be an image");
-                }
-
-                // Lưu file và cập nhật thumbnail trong DTO
-                String filename = storeFile(file);
-                // Lưu vào đối tượng product trong DB
-                ProductImage productImage = productService.createProductImage(
-                        existingProduct.getId(),
-                        ProductImageDTO.builder()
-                                .imageUrl(filename)
-                                .build()
-                );
-
-                productImages.add(productImage);
-            }
-
-            return ResponseEntity.ok().body(productImages);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
+    ) throws Exception {
+        Product existingProduct = productService.getProductById(productId);
+        files = files == null ? new ArrayList<>() : files;
+        if (files.size() > ProductImage.MAXIMUM_IMAGES_PER_PRODUCT) {
+            return ResponseEntity.badRequest().body(
+                    ResponseObject.builder()
+                            .message(localizationUtils
+                                    .getLocalizedMessage(MessageKeys.UPLOAD_IMAGES_MAX_5))
+                            .build()
+            );
         }
+
+        List<ProductImage> productImages = new ArrayList<>();
+        for (MultipartFile file : files) {
+            if (file.getSize() == 0) continue;
+
+            // Kiểm tra kích thước file và định dạng
+            if (file.getSize() > 10 * 1024 * 1024) {  // Kích thước > 10MB
+                return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE)
+                        .body(ResponseObject.builder()
+                                .message(localizationUtils
+                                        .getLocalizedMessage(MessageKeys.UPLOAD_IMAGES_FILE_LARGE))
+                                .status(HttpStatus.PAYLOAD_TOO_LARGE)
+                                .build());
+            }
+
+            String contentType = file.getContentType();
+            if (contentType == null || !contentType.startsWith("image/")) {
+                return ResponseEntity.status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
+                        .body(ResponseObject.builder()
+                                .message(localizationUtils
+                                        .getLocalizedMessage(MessageKeys.UPLOAD_IMAGES_FILE_MUST_BE_IMAGE))
+                                .status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
+                                .build());
+            }
+
+            // Lưu file và cập nhật thumbnail trong DTO
+            String filename = storeFile(file);
+            // Lưu vào đối tượng product trong DB
+            ProductImage productImage = productService.createProductImage(
+                    existingProduct.getId(),
+                    ProductImageDTO.builder()
+                            .imageUrl(filename)
+                            .build()
+            );
+
+            productImages.add(productImage);
+        }
+
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .message("Upload image successfully")
+                .status(HttpStatus.CREATED)
+                .data(productImages)
+                .build());
     }
 
     @GetMapping("/images/{imageName}")
@@ -162,7 +192,7 @@ public class ProductController {
     }
 
     @GetMapping("")
-    public ResponseEntity<ProductListResponse> getProducts(
+    public ResponseEntity<ResponseObject> getProducts(
             @RequestParam(defaultValue = "") String keyword,
             @RequestParam(defaultValue = "0", name = "category_id") Long categoryId,
             @RequestParam(defaultValue = "0") int page,
@@ -175,55 +205,63 @@ public class ProductController {
         int totalPages = productPage.getTotalPages();
         List<ProductResponse> products = productPage.getContent();
 
-        return ResponseEntity.ok(ProductListResponse.builder()
+        ProductListResponse productListResponse = ProductListResponse
+                .builder()
                 .products(products)
                 .totalPages(totalPages)
+                .build();
+
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .message("Get products successfully")
+                .status(HttpStatus.OK)
+                .data(productListResponse)
                 .build());
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> getProductById(@PathVariable("id") Long productId) {
-        try {
-            Product existingProduct = productService.getProductById(productId);
-            return ResponseEntity.ok(ProductResponse.fromProduct(existingProduct));
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<?> getProductById(@PathVariable("id") Long productId) throws Exception {
+        Product existingProduct = productService.getProductById(productId);
+        return ResponseEntity.ok(ResponseObject.builder()
+                .data(ProductResponse.fromProduct(existingProduct))
+                .message("Get detail product successfully")
+                .status(HttpStatus.OK)
+                .build());
     }
 
     @GetMapping("/by-ids")
     public ResponseEntity<?> getProductsByIds(@RequestParam("ids") String ids) {
-        try {
-            // Tách chuỗi ids thành một mảng các số nguyên
-            List<Long> productIds = Arrays.stream(ids.split(","))
-                    .map(Long::parseLong)
-                    .toList();
-
-            List<Product> products = productService.findProductsByIds(productIds);
-            return ResponseEntity.ok(products);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+        List<Long> productIds = Arrays.stream(ids.split(","))
+                .map(Long::parseLong)
+                .collect(Collectors.toList());
+        List<Product> products = productService.findProductsByIds(productIds);
+        return ResponseEntity.ok(ResponseObject.builder()
+                .data(products.stream().map(ProductResponse::fromProduct).toList())
+                .message("Get products successfully")
+                .status(HttpStatus.OK)
+                .build()
+        );
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateProduct(@PathVariable Long id, @RequestBody ProductDTO productDTO) {
-        try {
-            Product updatedProduct = productService.updateProduct(id, productDTO);
-            return ResponseEntity.ok(updatedProduct);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    public ResponseEntity<ResponseObject> updateProduct(@PathVariable Long id, @RequestBody ProductDTO productDTO) throws Exception {
+        Product updatedProduct = productService.updateProduct(id, productDTO);
+        return ResponseEntity.ok(ResponseObject.builder()
+                .data(updatedProduct)
+                .message("Update product successfully")
+                .status(HttpStatus.OK)
+                .build());
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> deleteProduct(@PathVariable Long id) {
-        try {
-            productService.deleteProduct(id);
-            return ResponseEntity.ok(String.format("Product with id = %d deleted successfully", id));
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    public ResponseEntity<ResponseObject> deleteProduct(@PathVariable Long id) {
+        productService.deleteProduct(id);
+        return ResponseEntity.ok(ResponseObject.builder()
+                .data(null)
+                .message(String.format("Product with id = %d deleted successfully", id))
+                .status(HttpStatus.OK)
+                .build());
     }
 
     //    @PostMapping("/generateFakeProducts")
